test/compiler_errors/override-x-attribute.lzx
<canvas>
  <class name="myview" width="100" height="100" bgcolor="red">
    <attribute  name="x" value="100" />
    <attribute  name="y" value="200"/>
  </class>
  
  <myview/>

</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2007 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
